// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FlowRow component styling with 3 items 1`] = `
.ibmJYt {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.ibmJYt > .FlowItemContainer-inwfIX,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:first-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:last-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.ibmJYt .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs ibmJYt"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs ibmJYt FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with alignment left 1`] = `
.fBMtkI {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.fBMtkI > .FlowItemContainer-inwfIX,
.fBMtkI > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
}

.fBMtkI > .FlowItemContainer-inwfIX:first-child,
.fBMtkI > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.fBMtkI > .FlowItemContainer-inwfIX:last-child,
.fBMtkI > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.fBMtkI .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="left"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="left"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="left"
      className="FlowRowStyles-duyuMs fBMtkI"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs fBMtkI FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with alignment right 1`] = `
.hRWpnE {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.hRWpnE > .FlowItemContainer-inwfIX,
.hRWpnE > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: auto;
  -ms-flex-basis: auto;
  flex-basis: auto;
}

.hRWpnE > .FlowItemContainer-inwfIX:first-child,
.hRWpnE > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.hRWpnE > .FlowItemContainer-inwfIX:last-child,
.hRWpnE > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.hRWpnE .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="right"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="right"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="right"
      className="FlowRowStyles-duyuMs hRWpnE"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs hRWpnE FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with just one item 1`] = `
.ibmJYt {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.ibmJYt > .FlowItemContainer-inwfIX,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:first-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:last-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.ibmJYt .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs ibmJYt"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs ibmJYt FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with nesting 1`] = `
.jnfPJO {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.jnfPJO > .FlowItemContainer-inwfIX,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:first-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:last-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.ibmJYt {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.ibmJYt > .FlowItemContainer-inwfIX,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:first-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:last-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.ibmJYt .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs ibmJYt"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs ibmJYt FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowRow
          Styles={[Function]}
          alignment="stretch"
          sizes={Array []}
        >
          <FlowRowStyles
            alignment="stretch"
            sizes={Array []}
            suppressLabels={false}
          >
            <FlowRowStyles__BaseStyles
              alignment="stretch"
              className="FlowRowStyles-duyuMs jnfPJO"
              sizes={Array []}
              suppressLabels={false}
            >
              <div
                className="FlowRowStyles-duyuMs jnfPJO FlowRowStyles__BaseStyles-bMPHYI blOfLL"
                sizes={Array []}
              >
                <FlowItem
                  Container={[Function]}
                  Content={[Function]}
                  FlexibleContent={[Function]}
                  HelpText={[Function]}
                  Label={[Function]}
                  MoreContent={[Function]}
                  alignment="stretch"
                  className={null}
                  error={false}
                  flexibleContent={false}
                  helpText={null}
                  id={null}
                  label="foo"
                  moreContent={null}
                >
                  <FlowItemContainer
                    alignment="stretch"
                    className={null}
                    id={null}
                  >
                    <div
                      className="FlowItemContainer-inwfIX iEbfDR"
                      id={null}
                    >
                      <Label
                        className="FlowItem-label"
                        disabled={false}
                        id={null}
                      >
                        <label
                          className="FlowItem-label Label-ghyrbC crMBmz"
                          disabled={false}
                          id={null}
                        >
                          foo
                        </label>
                      </Label>
                      <FlowItemContent>
                        <div
                          className="FlowItemContent-hJlKhy bduvXg"
                        />
                      </FlowItemContent>
                    </div>
                  </FlowItemContainer>
                </FlowItem>
                <FlowItem
                  Container={[Function]}
                  Content={[Function]}
                  FlexibleContent={[Function]}
                  HelpText={[Function]}
                  Label={[Function]}
                  MoreContent={[Function]}
                  alignment="stretch"
                  className={null}
                  error={false}
                  flexibleContent={false}
                  helpText={null}
                  id={null}
                  label={null}
                  moreContent={null}
                >
                  <FlowItemContainer
                    alignment="stretch"
                    className={null}
                    id={null}
                  >
                    <div
                      className="FlowItemContainer-inwfIX iEbfDR"
                      id={null}
                    >
                      <Label
                        className="FlowItem-label"
                        disabled={false}
                        id={null}
                      >
                        <label
                          className="FlowItem-label Label-ghyrbC crMBmz"
                          disabled={false}
                          id={null}
                        />
                      </Label>
                      <FlowItemContent>
                        <div
                          className="FlowItemContent-hJlKhy bduvXg"
                        />
                      </FlowItemContent>
                    </div>
                  </FlowItemContainer>
                </FlowItem>
              </div>
            </FlowRowStyles__BaseStyles>
          </FlowRowStyles>
        </FlowRow>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with one labeled item and one not 1`] = `
.jnfPJO {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.jnfPJO > .FlowItemContainer-inwfIX,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:first-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:last-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={false}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs jnfPJO"
      sizes={Array []}
      suppressLabels={false}
    >
      <div
        className="FlowRowStyles-duyuMs jnfPJO FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label="foo"
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                >
                  foo
                </label>
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with two labeled items 1`] = `
.jnfPJO {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.jnfPJO > .FlowItemContainer-inwfIX,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:first-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.jnfPJO > .FlowItemContainer-inwfIX:last-child,
.jnfPJO > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={false}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs jnfPJO"
      sizes={Array []}
      suppressLabels={false}
    >
      <div
        className="FlowRowStyles-duyuMs jnfPJO FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label="foo"
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                >
                  foo
                </label>
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label="bar"
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                >
                  bar
                </label>
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;

exports[`the FlowRow component styling with two unlabeled items 1`] = `
.ibmJYt {
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
}

.ibmJYt > .FlowItemContainer-inwfIX,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  margin-left: 15px;
  margin-right: 15px;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:first-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:first-child {
  margin-left: 0;
}

.ibmJYt > .FlowItemContainer-inwfIX:last-child,
.ibmJYt > .FlowRowStyles__BaseStyles-bMPHYI:last-child {
  margin-right: 0;
}

.ibmJYt .FlowItem-label {
  display: none;
}

.blOfLL {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.iEbfDR {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1em;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.iEbfDR > .FlowItem-label {
  height: 21px;
  margin: 0 0 5.6px 0;
  overflow-x: hidden;
  -webkit-flex-basis: 21px;
  -ms-flex-basis: 21px;
  flex-basis: 21px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemContent-hJlKhy {
  height: 53px;
  -webkit-flex-grow: 0;
  -ms-flex-grow: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.iEbfDR > .FlowItemContent-hJlKhy > * {
  margin: auto;
}

.iEbfDR > .FlowItemContent-hJlKhy > *:not(:last-child):not(:only-child) {
  margin-right: ;
}

.iEbfDR > .FlowItemFlexibleContent-drAddD {
  height: auto;
  -webkit-flex-basis: 53px;
  -ms-flex-basis: 53px;
  flex-basis: 53px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
}

.iEbfDR > .FlowItem-helpText {
  min-height: 18px;
  margin: 5.6px 0 0 0;
  -webkit-flex-basis: 18px;
  -ms-flex-basis: 18px;
  flex-basis: 18px;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-shrink: 0;
  flex-shrink: 0;
  padding: 0;
}

.iEbfDR > .FlowItemMoreContent-eLBclL {
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.crMBmz {
  font-size: 1em;
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 600;
  font-family: "Overpass",Raleway,"Open Sans",arial,sans-serif;
  color: #666;
  background: transparent;
  line-height: 1.5;
  display: block;
}

.crMBmz:disabled {
  opacity: 0.5;
}

<FlowRow
  Styles={[Function]}
  __styled-components__={[Function]}
  alignment="stretch"
  sizes={Array []}
>
  <FlowRowStyles
    alignment="stretch"
    sizes={Array []}
    suppressLabels={true}
  >
    <FlowRowStyles__BaseStyles
      alignment="stretch"
      className="FlowRowStyles-duyuMs ibmJYt"
      sizes={Array []}
      suppressLabels={true}
    >
      <div
        className="FlowRowStyles-duyuMs ibmJYt FlowRowStyles__BaseStyles-bMPHYI blOfLL"
        sizes={Array []}
      >
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
        <FlowItem
          Container={[Function]}
          Content={[Function]}
          FlexibleContent={[Function]}
          HelpText={[Function]}
          Label={[Function]}
          MoreContent={[Function]}
          alignment="stretch"
          className={null}
          error={false}
          flexibleContent={false}
          helpText={null}
          id={null}
          label={null}
          moreContent={null}
        >
          <FlowItemContainer
            alignment="stretch"
            className={null}
            id={null}
          >
            <div
              className="FlowItemContainer-inwfIX iEbfDR"
              id={null}
            >
              <Label
                className="FlowItem-label"
                disabled={false}
                id={null}
              >
                <label
                  className="FlowItem-label Label-ghyrbC crMBmz"
                  disabled={false}
                  id={null}
                />
              </Label>
              <FlowItemContent>
                <div
                  className="FlowItemContent-hJlKhy bduvXg"
                />
              </FlowItemContent>
            </div>
          </FlowItemContainer>
        </FlowItem>
      </div>
    </FlowRowStyles__BaseStyles>
  </FlowRowStyles>
</FlowRow>
`;
